// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KTable default has hover class when passed 1`] = `
<div>
  <section class="k-table-wrapper">
    <table data-tableid="test-table-id-1234" class="k-table has-hover">
      <thead class="">
        <tr class="">
          <th class="sortable"><span class="d-flex align-items-center"><span class="">
                    Name
                  </span> <span class="kong-icon caret ml-2 kong-icon-chevronDown"><svg height="12" width="12" viewBox="0 0 20 20" role="img"><title>Expand</title>  <g><!----> <!----> <path d="m4.6 7 5.2 5L15 7" fill="none" stroke="var(--KTableColor, var(--black-70, color(black-70)))" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="">
                    ID
                  </span>
            <!----></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="">
                    Enabled
                  </span>
            <!----></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="sr-only">
                    actions
                  </span>
            <!----></span></th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>Basic Auth</td>
          <td>517526354743085</td>
          <td>true</td>
          <td></td>
        </tr>
        <tr>
          <td>Website Desktop</td>
          <td>328027447731198</td>
          <td>false</td>
          <td></td>
        </tr>
        <tr>
          <td>Android App</td>
          <td>405383051040955</td>
          <td>true</td>
          <td></td>
        </tr>
      </tbody>
    </table>
    <nav aria-label="Pagination Navigation" data-testid="k-pagination-container" class="pa-1">
      <div class="card-pagination-bar"><span data-testid="visible-items" class="pagination-text"><span class="pagination-text-pages">1 to 3</span>
        of 3
        </span>
        <ul class="pagination-button-container">
          <li data-testid="prev-btn" class="pagination-button square disabled"><a href="#" aria-label="Go to the previous page"><span class="kong-icon kong-icon-arrowLeft"><svg height="16" width="16" viewBox="0 0 16 14" role="img"><title>Back</title>  <g><!----> <!----> <path d="M12.17 8.75H3M6.75 5 3 8.75l3.75 3.75" fill="none" stroke="var(--grey-500)" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></a></li>
          <!---->
          <!---->
          <!---->
          <!---->
          <li data-testid="next-btn" class="pagination-button square"><a href="#" aria-label="Go to the next page"><span class="kong-icon kong-icon-arrowRight"><svg height="16" width="16" viewBox="0 0 16 14" role="img"><title>Forward</title>  <g><!----> <!----> <path d="M3 8.75h9.17M8.42 5l3.75 3.75-3.75 3.75" fill="none" stroke="var(--blue-400)" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></a></li>
        </ul> <span data-testid="page-size-dropdown" class="page-size-select"><div class="k-select" style="width: 200px;"><!----> <div id="test-select-id-1234" data-testid="k-select-selected-item"><!----> <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button"><div id="test-select-input-id-1234" data-testid="k-select-input" role="listbox" class="k-select-button" style="position: relative;"><button type="button" class="k-button medium btn-link has-caret" id="test-select-text-id-1234" style="width: 200px;"> 15 items per page <span class="kong-icon kong-icon-chevronDown caret has-caret"><svg height="16" width="16" viewBox="2 2 15 15" role="img"><title>Expand</title>  <g><!----> <!----> <path d="m4.6 7 5.2 5L15 7" fill="none" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></button>
      </div>
      <div id="test-popover-id-1234" role="region" class="k-popover k-select-popover mt-0 undefined k-select-pop-button hide-caret" style="display: none;" name="fade">
        <!---->
        <div class="k-popover-content">
          <ul class="k-select-list ma-0 pa-0">
            <div>
              <div data-testid="k-select-item-15" class="k-select-item">
                <li role="option" class="d-block"><button value="15" class=""><span class="k-select-item-label mr-2">15</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-25" class="k-select-item">
                <li role="option" class="d-block"><button value="25" class=""><span class="k-select-item-label mr-2">25</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-50" class="k-select-item">
                <li role="option" class="d-block"><button value="50" class=""><span class="k-select-item-label mr-2">50</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-75" class="k-select-item">
                <li role="option" class="d-block"><button value="75" class=""><span class="k-select-item-label mr-2">75</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-100" class="k-select-item">
                <li role="option" class="d-block"><button value="100" class=""><span class="k-select-item-label mr-2">100</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
            </div>
          </ul>
        </div>
        <!---->
      </div>
</div>
</div>
</div></span></div>
</nav>
</section>
</div>
`;

exports[`KTable default renders link in action slot 1`] = `
<div>
  <section class="k-table-wrapper">
    <table data-tableid="test-table-id-1234" class="k-table has-hover">
      <thead class="">
        <tr class="">
          <th class="sortable"><span class="d-flex align-items-center"><span class="">
                    Name
                  </span> <span class="kong-icon caret ml-2 kong-icon-chevronDown"><svg height="12" width="12" viewBox="0 0 20 20" role="img"><title>Expand</title>  <g><!----> <!----> <path d="m4.6 7 5.2 5L15 7" fill="none" stroke="var(--KTableColor, var(--black-70, color(black-70)))" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="">
                    ID
                  </span>
            <!----></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="">
                    Enabled
                  </span>
            <!----></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="sr-only">
                    actions
                  </span>
            <!----></span></th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>Basic Auth</td>
          <td>517526354743085</td>
          <td>true</td>
          <td><a href="#">Link</a></td>
        </tr>
        <tr>
          <td>Website Desktop</td>
          <td>328027447731198</td>
          <td>false</td>
          <td><a href="#">Link</a></td>
        </tr>
        <tr>
          <td>Android App</td>
          <td>405383051040955</td>
          <td>true</td>
          <td><a href="#">Link</a></td>
        </tr>
      </tbody>
    </table>
    <!---->
  </section>
</div>
`;

exports[`KTable sorting should allow disabling sorting 1`] = `
<div>
  <section class="k-table-wrapper">
    <table data-tableid="test-table-id-1234" class="k-table has-hover">
      <thead class="">
        <tr class="">
          <th class=""><span class="d-flex align-items-center"><span class="">
                    Name
                  </span>
            <!----></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="">
                    ID
                  </span>
            <!----></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="">
                    Enabled
                  </span>
            <!----></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="sr-only">
                    actions
                  </span>
            <!----></span></th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>Basic Auth</td>
          <td>517526354743085</td>
          <td>true</td>
          <td></td>
        </tr>
        <tr>
          <td>Website Desktop</td>
          <td>328027447731198</td>
          <td>false</td>
          <td></td>
        </tr>
        <tr>
          <td>Android App</td>
          <td>405383051040955</td>
          <td>true</td>
          <td></td>
        </tr>
      </tbody>
    </table>
    <nav aria-label="Pagination Navigation" data-testid="k-pagination-container" class="pa-1">
      <div class="card-pagination-bar"><span data-testid="visible-items" class="pagination-text"><span class="pagination-text-pages">1 to 3</span>
        of 3
        </span>
        <ul class="pagination-button-container">
          <li data-testid="prev-btn" class="pagination-button square disabled"><a href="#" aria-label="Go to the previous page"><span class="kong-icon kong-icon-arrowLeft"><svg height="16" width="16" viewBox="0 0 16 14" role="img"><title>Back</title>  <g><!----> <!----> <path d="M12.17 8.75H3M6.75 5 3 8.75l3.75 3.75" fill="none" stroke="var(--grey-500)" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></a></li>
          <!---->
          <!---->
          <!---->
          <!---->
          <li data-testid="next-btn" class="pagination-button square"><a href="#" aria-label="Go to the next page"><span class="kong-icon kong-icon-arrowRight"><svg height="16" width="16" viewBox="0 0 16 14" role="img"><title>Forward</title>  <g><!----> <!----> <path d="M3 8.75h9.17M8.42 5l3.75 3.75-3.75 3.75" fill="none" stroke="var(--blue-400)" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></a></li>
        </ul> <span data-testid="page-size-dropdown" class="page-size-select"><div class="k-select" style="width: 200px;"><!----> <div id="test-select-id-1234" data-testid="k-select-selected-item"><!----> <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button"><div id="test-select-input-id-1234" data-testid="k-select-input" role="listbox" class="k-select-button" style="position: relative;"><button type="button" class="k-button medium btn-link has-caret" id="test-select-text-id-1234" style="width: 200px;"> 15 items per page <span class="kong-icon kong-icon-chevronDown caret has-caret"><svg height="16" width="16" viewBox="2 2 15 15" role="img"><title>Expand</title>  <g><!----> <!----> <path d="m4.6 7 5.2 5L15 7" fill="none" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></button>
      </div>
      <div id="test-popover-id-1234" role="region" class="k-popover k-select-popover mt-0 undefined k-select-pop-button hide-caret" style="display: none;" name="fade">
        <!---->
        <div class="k-popover-content">
          <ul class="k-select-list ma-0 pa-0">
            <div>
              <div data-testid="k-select-item-15" class="k-select-item">
                <li role="option" class="d-block"><button value="15" class=""><span class="k-select-item-label mr-2">15</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-25" class="k-select-item">
                <li role="option" class="d-block"><button value="25" class=""><span class="k-select-item-label mr-2">25</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-50" class="k-select-item">
                <li role="option" class="d-block"><button value="50" class=""><span class="k-select-item-label mr-2">50</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-75" class="k-select-item">
                <li role="option" class="d-block"><button value="75" class=""><span class="k-select-item-label mr-2">75</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-100" class="k-select-item">
                <li role="option" class="d-block"><button value="100" class=""><span class="k-select-item-label mr-2">100</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
            </div>
          </ul>
        </div>
        <!---->
      </div>
</div>
</div>
</div></span></div>
</nav>
</section>
</div>
`;

exports[`KTable sorting should have sortable class when passed 1`] = `
<div>
  <section class="k-table-wrapper">
    <table data-tableid="test-table-id-1234" class="k-table has-hover">
      <thead class="">
        <tr class="">
          <th class="sortable"><span class="d-flex align-items-center"><span class="">
                    Name
                  </span> <span class="kong-icon caret ml-2 kong-icon-chevronDown"><svg height="12" width="12" viewBox="0 0 20 20" role="img"><title>Expand</title>  <g><!----> <!----> <path d="m4.6 7 5.2 5L15 7" fill="none" stroke="var(--KTableColor, var(--black-70, color(black-70)))" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="">
                    ID
                  </span>
            <!----></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="">
                    Enabled
                  </span>
            <!----></span></th>
          <th class=""><span class="d-flex align-items-center"><span class="sr-only">
                    actions
                  </span>
            <!----></span></th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>Basic Auth</td>
          <td>517526354743085</td>
          <td>true</td>
          <td></td>
        </tr>
        <tr>
          <td>Website Desktop</td>
          <td>328027447731198</td>
          <td>false</td>
          <td></td>
        </tr>
        <tr>
          <td>Android App</td>
          <td>405383051040955</td>
          <td>true</td>
          <td></td>
        </tr>
      </tbody>
    </table>
    <nav aria-label="Pagination Navigation" data-testid="k-pagination-container" class="pa-1">
      <div class="card-pagination-bar"><span data-testid="visible-items" class="pagination-text"><span class="pagination-text-pages">1 to 3</span>
        of 3
        </span>
        <ul class="pagination-button-container">
          <li data-testid="prev-btn" class="pagination-button square disabled"><a href="#" aria-label="Go to the previous page"><span class="kong-icon kong-icon-arrowLeft"><svg height="16" width="16" viewBox="0 0 16 14" role="img"><title>Back</title>  <g><!----> <!----> <path d="M12.17 8.75H3M6.75 5 3 8.75l3.75 3.75" fill="none" stroke="var(--grey-500)" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></a></li>
          <!---->
          <!---->
          <!---->
          <!---->
          <li data-testid="next-btn" class="pagination-button square"><a href="#" aria-label="Go to the next page"><span class="kong-icon kong-icon-arrowRight"><svg height="16" width="16" viewBox="0 0 16 14" role="img"><title>Forward</title>  <g><!----> <!----> <path d="M3 8.75h9.17M8.42 5l3.75 3.75-3.75 3.75" fill="none" stroke="var(--blue-400)" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></a></li>
        </ul> <span data-testid="page-size-dropdown" class="page-size-select"><div class="k-select" style="width: 200px;"><!----> <div id="test-select-id-1234" data-testid="k-select-selected-item"><!----> <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button"><div id="test-select-input-id-1234" data-testid="k-select-input" role="listbox" class="k-select-button" style="position: relative;"><button type="button" class="k-button medium btn-link has-caret" id="test-select-text-id-1234" style="width: 200px;"> 15 items per page <span class="kong-icon kong-icon-chevronDown caret has-caret"><svg height="16" width="16" viewBox="2 2 15 15" role="img"><title>Expand</title>  <g><!----> <!----> <path d="m4.6 7 5.2 5L15 7" fill="none" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></g></svg></span></button>
      </div>
      <div id="test-popover-id-1234" role="region" class="k-popover k-select-popover mt-0 undefined k-select-pop-button hide-caret" style="display: none;" name="fade">
        <!---->
        <div class="k-popover-content">
          <ul class="k-select-list ma-0 pa-0">
            <div>
              <div data-testid="k-select-item-15" class="k-select-item">
                <li role="option" class="d-block"><button value="15" class=""><span class="k-select-item-label mr-2">15</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-25" class="k-select-item">
                <li role="option" class="d-block"><button value="25" class=""><span class="k-select-item-label mr-2">25</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-50" class="k-select-item">
                <li role="option" class="d-block"><button value="50" class=""><span class="k-select-item-label mr-2">50</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-75" class="k-select-item">
                <li role="option" class="d-block"><button value="75" class=""><span class="k-select-item-label mr-2">75</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
              <div data-testid="k-select-item-100" class="k-select-item">
                <li role="option" class="d-block"><button value="100" class=""><span class="k-select-item-label mr-2">100</span> <span class="k-select-selected-icon-container"><!----></span></button></li>
              </div>
            </div>
          </ul>
        </div>
        <!---->
      </div>
</div>
</div>
</div></span></div>
</nav>
</section>
</div>
`;

exports[`KTable states displays a loading skeletion when the "isLoading" prop is set to true" 1`] = `
<div>
  <div class="d-flex flex-wrap w-100 opacity-0">
    <div class="skeleton-table-wrapper">
      <div class="skeleton-table-row">
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
      </div>
      <div class="skeleton-table-row">
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
      </div>
      <div class="skeleton-table-row">
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
      </div>
      <div class="skeleton-table-row">
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
      </div>
      <div class="skeleton-table-row">
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
      </div>
      <div class="skeleton-table-row">
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
        <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KTable states displays an empty state when no data is available (slot) 1`] = `
<div pagesize="4">
  <div data-testid="k-table-empty-state"><span>Look mah! I am empty! (except testMode)</span></div>
</div>
`;

exports[`KTable states displays an empty state when no data is available 1`] = `
<div pagesize="4">
  <div data-testid="k-table-empty-state">
    <section class="empty-state-wrapper">
      <div class="empty-state-title">
        <!---->
        <div class="k-empty-state-title-header">No Data</div>
      </div>
      <div class="empty-state-content">
        <div class="k-empty-state-message">There is no data to display.</div>
        <div class="k-empty-state-cta">
          <!---->
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`KTable states displays an error state (slot) 1`] = `
<div>
  <div data-testid="k-table-error-state"><span>Look mah! I am erroneous! (except testMode)</span></div>
</div>
`;

exports[`KTable states displays an error state when the "hasError" prop is set to true" 1`] = `
<div>
  <div data-testid="k-table-error-state">
    <section class="empty-state-wrapper is-error">
      <div class="empty-state-title">
        <div class="k-empty-state-icon card-icon mb-4 warning-icon"><span class="kong-icon kong-icon-warning"><!----></span></div>
        <div class="k-empty-state-title-header">An error occurred</div>
      </div>
      <div class="empty-state-content">
        <div class="k-empty-state-message">Data cannot be displayed due to an error.</div>
        <div class="k-empty-state-cta">
          <!---->
        </div>
      </div>
    </section>
  </div>
</div>
`;
